--- a/PMS-PropertyHapa/Views/Home/Index.cshtml
+++ b/PMS-PropertyHapa/Views/Home/Index.cshtml
@@ -6,25 +6,11 @@
 @{
     ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
-    var user = await UserManager.GetUserAsync(User);
 }
 
 <div class="page-body">
     <div class="container-fluid">
-        <div class="page-title">
-            <div class="row">
-                <div class="col-12 col-sm-6">
-                    <h3>Dashboard</h3>
-                </div>
-                <div class="col-12 col-sm-6">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"> <a class="home-item" href="index.html"><i data-feather="home"></i></a></li>
-                        <li class="breadcrumb-item"> Dashboard</li>
-                        <li class="breadcrumb-item active"> </li>
-                    </ol>
-                </div>
-            </div>
-        </div>
+        <!-- Page Title and Breadcrumbs -->
     </div>
     <div class="container-fluid default-dash">
         <div class="row">
@@ -34,15 +20,40 @@
                         <div class="media">
                             <div class="media-body">
                                 <div class="greeting-user">
-                                  @*   <h1>Hello, @user.UserName</h1> *@
+                                    <h1 id="greetingUserName">Hello</h1>
                                     <p>Welcome back, your dashboard is ready!</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="cartoon-img"><img class="img-fluid" src="~/Dashboard/assets/images/images.svg" alt=""></div>
+                        <div class="cartoon-img">
+                            <img id="organizationLogo" class="img-fluid" src="~/Dashboard/assets/images/images.svg" alt="Organization Logo">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Fetch organization name and logo from localStorage
+            var organizationName = localStorage.getItem('organizationName');
+            var organizationLogo = localStorage.getItem('organizationLogo');
+
+            // Update the greeting text with the organization name if available
+            if (organizationName) {
+                document.getElementById('greetingUserName').textContent = `Hello, ${organizationName}`;
+            }
+
+        if (organizationLogo) {
+            // Remove quotes from the start and end of the organizationLogo
+            var cleanedOrganizationLogo = organizationLogo.slice(1, -1);
+            var fullLogoUrl = `https://localhost:7220/wwwroot/uploads/${cleanedOrganizationLogo}`;
+            document.getElementById('organizationLogo').setAttribute('src', fullLogoUrl);
+        }
+
+
+        });
+    </script>
+
