--- a/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa/Views/Shared/_Layout.cshtml
@@ -88,7 +88,7 @@
     <div class="page-wrapper compact-wrapper" id="pageWrapper">
         <!-- Page Header Start-->
         <div class="page-header">
-            <div class="header-wrapper row m-0">
+            <div class="header-wrapper row m-0" >
                 <div class="header-logo-wrapper col-auto p-0">
                     <div class="logo-wrapper"><a href="index.html"><img class="img-fluid" src="~/Dashboard/assets/images/logo/logo.png" alt=""></a></div>
                     <div class="toggle-sidebar">
@@ -167,12 +167,16 @@
         <!-- Page Header Ends -->
         <!-- Page Body Start-->
         <div class="page-body-wrapper">
-            <!-- Page Sidebar Start-->
+         
+
             <div class="sidebar-wrapper">
                 <div>
                     <div class="logo-wrapper">
                         <a href="@Url.Action("Index","Home")">
-                            <img class="img-fluid for-light" src="~/Dashboard/assets/images/logo/Logo-01.jpg" alt="" style="width: 252px;height: 66px;">
+                            <div class="organization-container">
+                                <h2 id="greetingUserName"></h2>
+                                <div id="organizationLogoBox" class="organization-logo"></div>
+                            </div>
                         </a>
                         <div class="back-btn"><i class="fa fa-angle-left"></i></div>
                     </div>
@@ -188,7 +192,7 @@
                              
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title" href="#">
-                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <svg width="24" class="img" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <g>
                                                 <g>
                                                     <path d="M15.7499 9.47167V6.43967C15.7549 4.35167 14.0659 2.65467 11.9779 2.64967C9.88887 2.64567 8.19287 4.33467 8.18787 6.42267V9.47167" stroke="#130F26" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -403,7 +407,8 @@
     <!-- Plugins JS Ends-->
     <!-- Theme js-->
     <script src="~/Dashboard/assets/js/script.js"></script>
-    <script src="~/Dashboard/assets/js/theme-customizer/customizer.js"></script>
+  @*   <script src="~/Dashboard/assets/js/theme-customizer/customizer.js"></script> *@
+   @*   <script src="~/Dashboard/assets/js/theme-customizer/JavaScript.js"></script>  *@
     <!-- login js-->
     <!-- Plugin used-->
     <!-- Plugins JS start-->
@@ -413,4 +418,53 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
 </body>
 </html>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Fetch organization name and logo from localStorage
+        var organizationName = localStorage.getItem('organizationName');
+        var organizationLogo = localStorage.getItem('organizationLogo');
 
+        // Update the greeting text with the organization name if available
+        if (organizationName) {
+            document.getElementById('greetingUserName').textContent = `${organizationName}`;
+        }
+
+        // Set organization logo as background image if available
+        if (organizationLogo) {
+            var cleanedOrganizationLogo = organizationLogo.replace(/^"|"$/g, '');
+            var fullLogoUrl = `https://localhost:7220/wwwroot/uploads/${cleanedOrganizationLogo}`;
+            var logoBox = document.getElementById('organizationLogoBox');
+            logoBox.style.backgroundImage = `url('${fullLogoUrl}')`;
+            logoBox.style.backgroundSize = 'cover';
+            logoBox.style.backgroundPosition = 'center';
+        }
+
+        // Apply primary and secondary colors
+        const primaryColor = localStorage.getItem('primaryColor');
+        const secondaryColor = localStorage.getItem('secondaryColor');
+
+        // Targets for primary color (background)
+        const elementsForPrimaryColor = document.querySelectorAll('.header-wrapper, .sidebar-wrapper, footer.footer, .logo-wrapper, .page-body-wrapper,.page-header');
+
+        elementsForPrimaryColor.forEach(function (element) {
+            if (primaryColor) {
+                element.style.backgroundColor = primaryColor;
+            }
+        });
+
+        // Targets for secondary color (font color)
+        const elementsForSecondaryColor = document.querySelectorAll('.header-wrapper,.sidebar-list .sidebar-wrapper,.page-body-wrapper,  .sidebar-link, .img, .profile-dropdown a, .sidebar-title span, footer.footer p');
+
+        elementsForSecondaryColor.forEach(function (element) {
+            if (secondaryColor) {
+                element.style.color = secondaryColor;
+            }
+        });
+
+
+        // Set SVG stroke colors to match the secondary color
+        document.querySelectorAll('svg').forEach(function (svg) {
+            svg.style.setProperty('--svg-icon-color', secondaryColor);
+        });
+    });
+</script>
